--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main> <h1>what</h1></main>
     <footer></footer>
     <script src="main.js"></script>
   </body>
