--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <header></header>
-    <main> <h1>what</h1></main>
+    <main>
+      <h1 class="h1_landing_page">COUCH POTATO</h1>
+   
+    </main>
     <footer></footer>
     <script src="main.js"></script>
   </body>
