--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main>
+    <header>
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <div class="overlay-content">
+          <a href="#">Millenials</a>
+          <a href="#">GenZ</a>
+        </div>
+      </div>
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+        >&#9776;
+      </span>
+    </header>
+    <main class="container_landing">
+      <p>Welcome to</p>
       <h1 class="h1_landing_page">COUCH POTATO</h1>
-   
+      <img class="couch_img" src="/images/couch-01.svg" alt="couch-01" />
+      <img class="potato_img" src="/images/potato-01.svg" alt="potato-01" />
+      <p>
+        Here you can find the most popular TV series from the early 90s up to
+        now.<br />Let’s begin by choosing an era.
+      </p>
+      <section class="buttons">
+        <button type="button" class="m-button">Millenials</button>
+        <button type="button" class="z-button">GenZ</button>
+      </section>
     </main>
     <footer></footer>
     <script src="main.js"></script>
