--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
+          >&times;</a
+        >
+        <div class="overlay-content">
+          <a href="#">Millenials</a>
+          <a href="#">GenZ</a>
+        </div>
+      </div>
+      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+        >&#9776;
+      </span>
+    </header>
     <main></main>
     <footer></footer>
     <script src="main.js"></script>
