--- a/index.html
+++ b/index.html
@@ -8,9 +8,45 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <a href="index.html">
+        <img
+          src="images/couch_potato_logo.png"
+          alt="logo"
+          height="70"
+          width="100"
+      /></a>
+      <nav>
+        <ul>
+          <li class="nav"><a href="index.html">Home</a></li>
+          <li class="nav"><a href="productlist.html">Gen - Z</a></li>
+          <li class="nav"><a href="product.html">Millennials</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <img src="images/The Wire.png" alt="poster" />
+      <article>
+        <h3>Description</h3>
+
+        <h4>Series Name : The Wire</h4>
+        <h3>Genre:</h3>
+        <p>Crime,Drama, Thriller</p>
+        <p>Seasons : 5</p>
+        <p>Released on 2002</p>
+        <p>
+          Looking at it from the perspective of the drug dealers and the law
+          enformcement, The wire is showing the scenes of the Baltimore drug
+          situation.
+        </p>
+        <h3>Streaming On:</h3>
+        <p>HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu</p>
+        <h3>Rating</h3>
+        <img src="images/star.png" alt="star" height="70" width="70" />
+        <h3>9/10</h3>
+      </article>
+    </main>
+    <footer>MMD Students</footer>
     <script src="main.js"></script>
   </body>
 </html>
