--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main class="container_landing">
       <p>Welcome to</p>
       <h1 class="h1_landing_page">COUCH POTATO</h1>
-      <img class="couch_img" src="/images/couch-01.svg" alt="couch-01" />
-      <img class="potato_img" src="/images/potato-01.svg" alt="potato-01" />
+      <img class="couch_img" src="images/couch-01.svg" alt="couch-01" />
+      <img class="potato_img" src="images/potato-01.svg" alt="potato-01" />
       <p>
         Here you can find the most popular TV series from the early 90s up to
         now.<br />Let’s begin by choosing an era.
