added API, endpoint, articles to html

--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -22,7 +22,136 @@
         >&#9776;
       </span>
     </header>
-    <main></main>
+    <main>
+      <h1 class="miltitle"></h1>
+      <div class="listlayout">
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+      </div>
+    </main>
     <footer></footer>
     <script src="main.js"></script>
   </body>
