--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -22,7 +22,141 @@
         >&#9776;
       </span>
     </header>
-    <main></main>
+    <main>
+      <h1 class="genztitle"></h1>
+      <div class="listlayout">
+        <article>
+          <img class="" src="" alt="" />
+          <h2 class=""></h2>
+          <p class=""></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+        <article>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </article>
+      </div>
+    </main>
     <footer></footer>
     <script src="main.js"></script>
   </body>
