--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -25,12 +25,14 @@
     <main>
       <h1 class="genztitle"></h1>
       <div class="listlayout">
-        <article>
-          <img class="" src="" alt="" />
-          <h2 class=""></h2>
-          <p class=""></p>
-        </article>
-        <article>
+        <template id="smallSeriesTemplate">
+          <article>
+            <img class="seriesImage" src="" alt="" />
+            <h2 class="seriesName"></h2>
+            <p class="seriesDescription"></p>
+          </article>
+        </template>
+        <!-- <article>
           <img src="" alt="" />
           <h2></h2>
           <p></p>
@@ -154,7 +156,7 @@
           <img src="" alt="" />
           <h2></h2>
           <p></p>
-        </article>
+        </article> -->
       </div>
     </main>
     <footer></footer>
