--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <nav>
         <ul>
           <li class="nav"><a href="index.html">Home</a></li>
-          <li class="nav"><a href="productlist.html">Gen - Z</a></li>
-          <li class="nav"><a href="product.html">Millennials</a></li>
+          <li class="series"><a href="productlist.html">Gen - Z</a></li>
+          <li class="seriesname"><a href="product.html">Millennials</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <img src="images/The Wire.png" alt="poster" />
+      <img class="seriesImage" src="images/The Wire.png" alt="poster" />
       <article>
         <h3>Description</h3>
 
