--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           >&times;</a
         >
         <div class="overlay-content">
-          <a href="#">Millenials</a>
+          <a href="#">Millennials</a>
           <a href="#">GenZ</a>
         </div>
       </div>
@@ -25,14 +25,18 @@
     <main class="container_landing">
       <p>Welcome to</p>
       <h1 class="h1_landing_page">COUCH POTATO</h1>
+      <div class="potato_container">
       <img class="couch_img" src="images/couch-01.svg" alt="couch-01" />
+
       <img class="potato_img" src="images/potato-01.svg" alt="potato-01" />
+      <img class="popcorn_img" src="images/pop_corn-01.svg" alt="popcorn-01" />
+    </div>
       <p>
         Here you can find the most popular TV series from the early 90s up to
         now.<br />Let’s begin by choosing an era.
       </p>
       <section class="buttons">
-        <button type="button" class="m-button">Millenials</button>
+        <button type="button" class="m-button">Millennials</button>
         <button type="button" class="z-button">GenZ</button>
       </section>
     </main>
