--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -27,7 +27,7 @@
       <template id="smallSeriesTemplate">
         <article>
           <img class="seriesImage" src="" alt="" />
-          <h2 class="seriesName"></h2>
+          <h2 class="seriesName">what</h2>
           <p class="seriesDescription"></p>
         </article>
       </template>
