java script fix

--- a/index.html
+++ b/index.html
@@ -27,23 +27,36 @@
     <main>
       <img class="seriesImage" src="images/The Wire.png" alt="poster" />
       <article>
-        <h3>Description</h3>
+        <h2>Series Name : The Wire</h2>
 
-        <h4>Series Name : The Wire</h4>
         <h3>Genre:</h3>
         <p>Crime,Drama, Thriller</p>
-        <p>Seasons : 5</p>
-        <p>Released on 2002</p>
+
+        <h3>Released on</h3>
+        <p>2002</p>
+
+        <h3>Last Episode on</h3>
+        <p>2008</p>
+
+        <h3>Description</h3>
         <p>
           Looking at it from the perspective of the drug dealers and the law
           enformcement, The wire is showing the scenes of the Baltimore drug
           situation.
         </p>
+
         <h3>Streaming On:</h3>
         <p>HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu</p>
-        <h3>Rating</h3>
+        <h3>Rating: 9.3</h3>
+
         <img src="images/star.png" alt="star" height="70" width="70" />
-        <h3>9/10</h3>
+
+        <h3>Seasons : 5</h3>
+        <p>Season:1</p>
+        <p>Season:2</p>
+        <p>Season:3</p>
+        <p>Season:4</p>
+        <p>Season:5</p>
       </article>
     </main>
     <footer>MMD Students</footer>
