--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         >
         <div class="overlay-content">
           <a href="#">Millennials</a>
-          <a href="#">GenZ</a>
+          <a href="genzmovielist.html">GenZ</a>
         </div>
       </div>
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
