--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
           >&times;</a
         >
         <div class="overlay-content">
-          <a href="#">Millenials</a>
-          <a href="#">GenZ</a>
+          <a href="millenialmovielist.html">Millennials</a>
+          <a href="genzmovielist.html">GenZ</a>
         </div>
       </div>
       <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
@@ -32,7 +32,7 @@
         now.<br />Let’s begin by choosing an era.
       </p>
       <section class="buttons">
-        <button type="button" class="m-button">Millenials</button>
+        <button type="button" class="m-button">Millennials</button>
         <button type="button" class="z-button">GenZ</button>
       </section>
     </main>
