--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -14,7 +14,7 @@
           >&times;</a
         >
         <div class="overlay-content">
-          <a href="#">Millenials</a>
+          <a href="millenialmovielist.html">Millenials</a>
           <a href="#">GenZ</a>
         </div>
       </div>
