--- a/product.html
+++ b/product.html
@@ -27,13 +27,15 @@
     <main>
       <img class="seriesImage" src="images/The Wire.png" alt="poster" />
       <article>
-        <h3>Description</h3>
-
-        <h4>Series Name : The Wire</h4>
+        <h2>Series Name : The Wire</h2>
         <h3>Genre:</h3>
         <p>Crime,Drama, Thriller</p>
-        <p>Seasons : 5</p>
-        <p>Released on 2002</p>
+        <h3>Seasons : 5</h3>
+        <h3>Released on</h3>
+        <p>2002</p>
+        <h3>Last Episode:</h3>
+        <p>2008</p>
+        <h3>Description</h3>
         <p>
           Looking at it from the perspective of the drug dealers and the law
           enformcement, The wire is showing the scenes of the Baltimore drug
@@ -41,9 +43,8 @@
         </p>
         <h3>Streaming On:</h3>
         <p>HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu</p>
-        <h3>Rating</h3>
+        <h3>Rating: 9.3</h3>
         <img src="images/star.png" alt="star" height="70" width="70" />
-        <h3>9/10</h3>
       </article>
     </main>
     <footer>MMD Students</footer>
