--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
   </head>
   <body>
     <header>
+      <a href="index.html">
+        <img
+          src="images/couch_potato_logo.png"
+          alt="logo"
+          height="70"
+          width="100"
+      /></a>
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
