--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -30,134 +30,18 @@
       </span>
     </header>
     <main>
-      <h1 class="miltitle"></h1>
-      <div class="listlayout">
+      <h1 class="miltitle">Millenials</h1>
+      <template id="smallSeriesTemplate">
         <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
+          <img class="seriesImage" src="" alt="" />
+          <h2 class="seriesName">Sabrina the teenage witch</h2>
+          <h3 class="rating">Imdb rating:<span>6.7</span></h3>
+          <p class="seriesDescription">
+            This is about the advendtures of a 16 year-old girl, who finds out
+            she is part of the magical world.
+          </p>
         </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-      </div>
+      </template>
     </main>
     <footer></footer>
     <script src="main.js"></script>
