--- a/series.html
+++ b/series.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="mmyheader">
       <a href="index.html">
         <img
           src="images/couch_potato_logo.png"
@@ -29,25 +29,32 @@
         >&#9776;
       </span>
     </header>
-    <main>
-      <img class="seriesImage" src="images/The Wire.png" alt="poster" />
+    <main class="mmymain">
+      <img
+        class="seriesimages"
+        src="images/The Wire.png"
+        alt="poster"
+        height="80%"
+      />
       <article>
-        <h2>Series Name : The Wire</h2>
+        <h2 class="myTitle">Series Name : The Wire</h2>
         <h3>Genre:</h3>
-        <p>Crime,Drama, Thriller</p>
+        <p class="mmyp">Crime,Drama, Thriller</p>
         <h3>Seasons : 5</h3>
         <h3>Released on</h3>
-        <p>2002</p>
+        <p class="mmyp">2002</p>
         <h3>Last Episode:</h3>
-        <p>2008</p>
-        <h3>Description</h3>
-        <p>
+        <p class="mmyp">2008</p>
+        <h3 class="summary">Description</h3>
+        <p class="mmyp">
           Looking at it from the perspective of the drug dealers and the law
           enformcement, The wire is showing the scenes of the Baltimore drug
           situation.
         </p>
         <h3>Streaming On:</h3>
-        <p>HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu</p>
+        <p class="mmyp">
+          HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu
+        </p>
         <h3>Rating: 9.3</h3>
         <img src="images/star.png" alt="star" height="70" width="70" />
       </article>
