--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -33,136 +33,20 @@
       <h1 class="genztitle"></h1>
       <template id="smallSeriesTemplate">
         <article>
-          <img class="seriesImage" src="" alt="" />
-          <h2 class="seriesName">what</h2>
-          <p class="seriesDescription"></p>
+          <img
+            class="seriesImage"
+            src="https://hyggeland.dk/common_passion_images/The-Wire.png"
+            alt=""
+          />
+          <h2 class="seriesName">The Wire</h2>
+          <h3 class="rating">Imdb rating:<span>9.3</span></h3>
+          <p class="seriesDescription">
+            Looking at it from the perspective of the drug dealers and the law
+            enformcement, The wire is showing the scenes of the Baltimore drug
+            situation.
+          </p>
         </article>
       </template>
-      <!-- <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article>
-        <article>
-          <img src="" alt="" />
-          <h2></h2>
-          <p></p>
-        </article> -->
     </main>
     <footer></footer>
     <script src="main.js"></script>
