--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -33,7 +33,11 @@
       <h1 class="miltitle">Millenials</h1>
       <template id="smallSeriesTemplate">
         <article>
-          <img class="seriesImage" src="" alt="" />
+          <img
+            class="seriesImage"
+            src="https://hyggeland.dk/common_passion_images/Sabrina-the-teenage-witch.png"
+            alt=""
+          />
           <h2 class="seriesName">Sabrina the teenage witch</h2>
           <h3 class="rating">Imdb rating:<span>6.7</span></h3>
           <p class="seriesDescription">
