fix old javascript

--- a/series.html
+++ b/series.html
@@ -32,34 +32,31 @@
     <main class="mmymain">
       <img
         class="seriesimages"
-        src="images/The Wire.png"
+        src="https://hyggeland.dk/common_passion_images/The-Wire.png"
         alt="poster"
         height="80%"
       />
       <article>
-        <h2 class="myTitle">Series Name : The Wire</h2>
-        <h3>Genre:</h3>
-        <p class="mmyp">Crime,Drama, Thriller</p>
-        <h3>Seasons : 5</h3>
-        <h3>Released on</h3>
-        <p class="mmyp">2002</p>
-        <h3>Last Episode:</h3>
-        <p class="mmyp">2008</p>
+        <h2>The Wire</h2>
+        <h3>Genre: <span>Crime,Drama, Thriller</span></h3>
+        <h3>Seasons : <span>5</span></h3>
+        <h3>Released on <span>2002</span></h3>
+        <h3>Last Episode: <span>2008</span></h3>
         <h3 class="summary">Description</h3>
         <p class="mmyp">
           Looking at it from the perspective of the drug dealers and the law
           enformcement, The wire is showing the scenes of the Baltimore drug
           situation.
         </p>
-        <h3>Streaming On:</h3>
-        <p class="mmyp">
-          HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu
-        </p>
-        <h3>Rating: 9.3</h3>
+        <h3>
+          Streaming On:
+          <span> HBO Max, iTunes, Amazon Prime Video, Google Play, Vudu </span>
+        </h3>
+        <h3>Rating: <span>9.3</span></h3>
         <img src="images/star.png" alt="star" height="70" width="70" />
       </article>
     </main>
-    <footer>MMD Students</footer>
-    <script src="main.js"></script>
+    <footer></footer>
+    <script src="serie.js"></script>
   </body>
 </html>
