created new js added new urls

--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -49,6 +49,6 @@
       </template>
     </main>
     <footer></footer>
-    <script src="main.js"></script>
+    <script src="mil.js"></script>
   </body>
 </html>
