added cc layout

--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -29,9 +29,9 @@
         >&#9776;
       </span>
     </header>
-    <main>
+    <main class="listLayout">
       <h1 class="miltitle">Millenials</h1>
-      <template id="smallSeriesTemplate">
+      <template id="smallSeriesTemplate" >
         <article>
           <img 
             class="seriesImage"
