--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img
+      <a href="index.html" class="logo">
+        <img 
           src="images/couch_potato_logo.png"
           alt="logo"
           height="70"
@@ -31,21 +31,27 @@
     </header>
     <main>
       <h1 class="miltitle">Millenials</h1>
-      <template id="smallSeriesTemplate">
-        <article>
-          <img
+      <div class="milgrid">
+        <div class="photo">
+          <article>
+           <img
             class="seriesImage"
             src="https://hyggeland.dk/common_passion_images/Sabrina-the-teenage-witch.png"
             alt=""
-          />
+            height="500"
+            width="450"
+            />
+          </article>
+        </div>
+        <div class="text">
           <h2 class="seriesName">Sabrina the teenage witch</h2>
           <h3 class="rating">Imdb rating:<span>6.7</span></h3>
           <p class="seriesDescription">
             This is about the advendtures of a 16 year-old girl, who finds out
             she is part of the magical world.
           </p>
-        </article>
-      </template>
+        </div> 
+      </div>
     </main>
     <footer></footer>
     <script src="main.js"></script>
