--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -32,26 +32,22 @@
     <main>
       <h1 class="miltitle">Millenials</h1>
       <div class="milgrid">
-        <div class="photo">
-          <article>
-           <img
+      <template id="smallSeriesTemplate">
+        <article>
+          <img
             class="seriesImage"
             src="https://hyggeland.dk/common_passion_images/Sabrina-the-teenage-witch.png"
             alt=""
-            height="500"
-            width="450"
-            />
-          </article>
-        </div>
-        <div class="text">
+          />
           <h2 class="seriesName">Sabrina the teenage witch</h2>
           <h3 class="rating">Imdb rating:<span>6.7</span></h3>
           <p class="seriesDescription">
             This is about the advendtures of a 16 year-old girl, who finds out
             she is part of the magical world.
           </p>
-        </div> 
-      </div>
+        </article>
+      </template>
+    </div>
     </main>
     <footer></footer>
     <script src="main.js"></script>
