finally finally javascript

--- a/series.html
+++ b/series.html
@@ -44,7 +44,7 @@
         <h3>Released on <span class="released">2002</span></h3>
         <h3 class="lastepisode">Last Episode: <span>2008</span></h3>
         <h3 class="summary">Description</h3>
-        <p class="mmyp">
+        <p class="p">
           Looking at it from the perspective of the drug dealers and the law
           enformcement, The wire is showing the scenes of the Baltimore drug
           situation.
