--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -29,9 +29,9 @@
         >&#9776;
       </span>
     </header>
-    <main class="listLayout">
+    <main>
       <h1 class="miltitle">Millenials</h1>
-      <template id="smallSeriesTemplate" >
+      <template id="smallSeriesTemplate" class="listLayout">
         <article>
           <img
             class="seriesImage"
