--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -40,6 +40,7 @@
           />
           <h2 class="seriesName">The Wire</h2>
           <h3 class="rating">Imdb rating:<span>9.3</span></h3>
+          <a href="series.html?id=620bacfef701f460000a2510">Read more</a>
           <p class="seriesDescription">
             Looking at it from the perspective of the drug dealers and the law
             enformcement, The wire is showing the scenes of the Baltimore drug
