buttons_home_internal_links

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         now.<br />Let’s begin by choosing an era.
       </p>
       <section class="buttons">
-        <button type="button" class="m-button">Millennials</button>
-        <button type="button" class="z-button">GenZ</button>
+        <a href="millenialmovielist.html"><button type="button" class="m-button">Millennials</button></a>
+        <a href="genzmovielist.html"><button type="button" class="z-button">GenZ</button></a>
       </section>
     </main>
     <footer></footer>
