--- a/millenialmovielist.html
+++ b/millenialmovielist.html
@@ -31,13 +31,15 @@
     </header>
     <main class="listLayout">
       <h1 class="miltitle">Millenials</h1>
-      <template id="smallSeriesTemplate" >
+      <div class="serieslist">
+        <template id="smallSeriesTemplate" >
         <article>
           <img 
             class="seriesImage"
             src="https://hyggeland.dk/common_passion_images/Sabrina-the-teenage-witch.png"
             alt="{name}"
           />
+          <div>
           <h2 class="seriesName">Sabrina the teenage witch</h2>
           <h3 class="rating">Imdb rating:<span>6.7</span></h3>
           <a href="series.html?id=620bacfef701f460000a2510">Read more</a>
@@ -45,6 +47,7 @@
             This is about the advendtures of a 16 year-old girl, who finds out
             she is part of the magical world. -->
           </p>
+        </div>
         </article>
       </template>
     </div>
