--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img
-          src="images/couch_potato_logo.png"
-          alt="logo"
-          height="70"
-          width="100"
-      /></a>
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
@@ -32,16 +25,8 @@
     <main class="container_landing">
       <p>Welcome to</p>
       <h1 class="h1_landing_page">COUCH POTATO</h1>
-      <div class="potato_container">
-        <img class="couch_img" src="images/couch-01.svg" alt="couch-01" />
-
-        <img class="potato_img" src="images/potato-01.svg" alt="potato-01" />
-        <img
-          class="popcorn_img"
-          src="images/pop_corn-01.svg"
-          alt="popcorn-01"
-        />
-      </div>
+      <img class="couch_img" src="/images/couch-01.svg" alt="couch-01" />
+      <img class="potato_img" src="/images/potato-01.svg" alt="potato-01" />
       <p>
         Here you can find the most popular TV series from the early 90s up to
         now.<br />Let’s begin by choosing an era.
