--- a/series.html
+++ b/series.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="mmyheader">
+    <header>
       <a href="index.html">
         <img
           src="images/couch_potato_logo.png"
