--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -30,7 +30,7 @@
       </span>
     </header>
     <main>
-      <h1 class="genztitle"></h1>
+      <h1 class="genztitle">Gen Z</h1>
       <template id="smallSeriesTemplate">
         <article>
           <img
