--- a/genzmovielist.html
+++ b/genzmovielist.html
@@ -8,13 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html">
-        <img
-          src="images/couch_potato_logo.png"
-          alt="logo"
-          height="70"
-          width="100"
+    <header class="logoheader">
+      <a id="logo" href="index.html">
+        <img src="images/logo-01.svg" alt="logo"
       /></a>
       <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
@@ -25,7 +21,14 @@
           <a href="#">GenZ</a>
         </div>
       </div>
-      <span style="font-size: 30px; cursor: pointer" onclick="openNav()"
+      <span
+        style="
+          font-size: 30px;
+          cursor: pointer;
+          display: flex;
+          justify-content: flex-end;
+        "
+        onclick="openNav()"
         >&#9776;
       </span>
     </header>
